objects/Mil_Move_Feed__c/Mil_Move_Feed__c.object-meta.xml
<CustomObject>
    <label>Mil_Move_Feed</label>
    <nameField>
        <displayFormat>MOVE_{YYYY}{MM}-{0}</displayFormat>
        <label>Mil_Move_Feed_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mil_Move_Feeds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>