objects/Mil_Move_Feed__c/fields/feed_type__c.field-meta.xml
<CustomField>
    <fullName>feed_type__c</fullName>
    <label>feed_type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USER_SYNC_DATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>