objects/Mil_Move_Feed__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <defaultValue>"NEW"</defaultValue>
    <label>status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>