objects/Mil_Move_Feed__c/fields/text_1__c.field-meta.xml
<CustomField>
    <fullName>text_1__c</fullName>
    <label>text_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>