objects/Mil_Move_Feed__c/fields/text_2__c.field-meta.xml
<CustomField>
    <fullName>text_2__c</fullName>
    <label>text_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>