objects/Mil_Move_Feed__c/fields/text_3__c.field-meta.xml
<CustomField>
    <fullName>text_3__c</fullName>
    <label>text_3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>