objects/Mil_Move_Feed__c/fields/username__c.field-meta.xml
<CustomField>
    <fullName>username__c</fullName>
    <label>username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>