objects/Mil_Move_Feed__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>feed_type__c</columns>
    <columns>status__c</columns>
    <columns>username__c</columns>
    <columns>text_1__c</columns>
    <columns>text_2__c</columns>
    <columns>text_3__c</columns>
    <columns>text_4__c</columns>
    <columns>text_5__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>